--- a/src/App.css
+++ b/src/App.css
@@ -116,13 +116,13 @@ body {
   color: black;
   font-weight: bold;
   display: block;
-  margin-top: 8px;
+  margin-top: 10px;
   font-size: 24px;
   cursor: pointer;
 }
 
 .character-card > p {
-  margin-top: 8px;
+  margin-top: 10px;
 }
 
 .character-card > img {
@@ -143,4 +143,19 @@ body {
   width: 100vw;
   max-width: 900px;
   max-height: 275px;
+}
+
+.character-name {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  display: block;
+  margin-top: 8px;
+  font-size: 24px;
+  cursor: pointer;
+  transition: ease-in-out all 0.3s;
+}
+
+.character-name:hover {
+  color:red;
 }
